service katmanı tamamlandı